[project]
name = "newspodcast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lxml>=6.1.1",
    "openai>=2.37.0",
    "playwright>=1.60.0",
    "pydantic>=2.13.4",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "tqdm>=4.67.3",
]
